<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kindle爱推到</string>
    <string name="push_count_str_tail">次推送</string>
    
    <string name="sort_type_pull_label_for_time">下拉获取最【新】图书…</string>
    <string name="sort_type_release_label_for_time">放开以获取最【新】图书…</string>
    <string name="sort_type_refreshing_label_for_time">正在获取最【新】图书…</string>
    
    <string name="sort_type_pull_label_for_hot">下拉获取最【热】图书…</string>
    <string name="sort_type_release_label_for_hot">放开以获取最【热】图书…</string>
    <string name="sort_type_refreshing_label_for_hot">正在获取最【热】图书…</string>
    
    <string name="book_list_getting_more">正在获取更多…</string>
    <string name="book_list_no_getting_more">没有更多</string>
    
    <string name="set_push_address_activity_title">设置推送地址</string>
    <string name="set_push_address">请填写并选择推送到的地址:</string>
    <string name="set_push_address_next_step">下一步</string>
    <string name="please_input_addr">还没有输入地址哦 -_-</string>
    <string name="please_input_valid_addr">地址格式不对呀，请重新输入</string>
    <string name="why_need_push_addr"><u>什么是推送地址？</u></string>
    
    <string name="push_address_trust_activity_title">加入认可列表</string>
    <string name="set_address_trust">推送之前，您需要先登录Amazon网站将下面的地址加入到您的Kindle认可发件人列表中:</string>
    <string name="has_set_trust">已去设置了，现在推送</string>
    <string name="later_set_trust">稍后再设置</string>
    <string name="why_need_trust_addr"><u>什么是认可列表？</u></string>
    
    <string name="push_addr_choice_dlg_title">选择推送地址</string>
    <string name="push_addr_choice_dlg_new_addr">其它推送地址&#8230;</string>
    
    <string name="start_push_book_str">正在推送《####》&#8230;</string>
    <string name="push_book_success_str">《####》推送成功，请过几分钟后将Kindle连接网络等待收取 ^_^</string>
    <string name="push_book_error_str">《####》推送失败 o_o</string>
    
    <string name="no_network">网络没有打开哦</string>
    
    <string name="which_app_open_help_doc">使用哪个应用打开帮助文档？</string>
    
    <string name="curr_point">(####积分</string>
    <string name="earn_point_ul"><u>赚取</u></string>
    <string name="earn_point_end">)</string>
    
    <string name="less_point_dialog_title">您的积分不足（每次推送会消费您####个积分）</string>
    <string name="less_point_dialog_content">通过完成一些任务（这些任务都很简单哦 ^_^），您可以赚取积分。\n\n赚取的积分会在您完成任务后自动充值到您的帐户</string>
    <string name="less_point_dialog_ok">去赚积分</string>
    <string name="less_point_dialog_cancel">先不了</string>
    
    <string name="douban_rate_str">豆瓣评分:####</string>
    
    <string name="upload_user_str">上传者:####</string>
    
    <string name="local_upload">本地文件推送</string>
    
    <string name="need_file_browser">请先安装一个文件浏览器。“爱推到”要使用它来选择您要推送的文件</string>
    <string name="unsupport_file">选择的文件有误</string>
    <string name="too_large_file">当前只能推送####M大小以下的文件</string>
    
    <string-array name="push_address_tail_array">
        <item>kindle.cn</item>
        <item>kindle.com</item>
        <item>free.kindle.com</item>
        <item>iduokan.com</item>
    </string-array>
</resources>
