<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >
    
    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/title_bar_bg" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/push_address_trust_activity_title"
            android:textStyle="bold"
            android:textColor="#CD3700"
            android:textSize="20sp"
            android:singleLine="true"
            android:ellipsize="end"
        />
        
    </RelativeLayout>
    
    <TextView
        android:id="@+id/hint_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/title_bar"
        android:layout_marginTop="20dp"
        android:text="@string/set_address_trust"
        android:textStyle="bold"
        android:textColor="#b4b4b4"
        android:textSize="18sp"
        android:singleLine="false"
    />
    
    <TextView
        android:id="@+id/trust_source_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint_tv"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#CD3700"
        android:textSize="20sp"
        android:singleLine="false"
    />
    
    <TextView
        android:id="@+id/has_set_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trust_source_tv"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:padding="6dp"
        android:background="@drawable/buttom_bg"
        android:text="@string/has_set_trust"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:clickable="true"
        android:singleLine="true"
        android:ellipsize="end"
    />
    
    <TextView
        android:id="@+id/later_set_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/has_set_btn"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:padding="6dp"
        android:background="@drawable/buttom_bg"
        android:text="@string/later_set_trust"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:clickable="true"
        android:singleLine="true"
        android:ellipsize="end"
    />
    
</RelativeLayout>