<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >
    
    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/title_bar_bg" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/set_push_address_activity_title"
            android:textStyle="bold"
            android:textColor="#CD3700"
            android:textSize="20sp"
            android:singleLine="true"
            android:ellipsize="end"
        />
        
    </RelativeLayout>
    
    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_below="@id/title_bar"
		android:layout_marginTop="10dp"
		android:text="@string/set_push_address"
		android:textStyle="bold"
		android:textColor="#b4b4b4"
		android:textSize="18sp"
		android:singleLine="true"
		android:ellipsize="end"
    />
    
    <LinearLayout
        android:id="@+id/addr_input_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/hint"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >        
        
        <EditText
            android:id="@+id/addr_head_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
	        android:textColor="#404040"
	        android:textSize="16sp"
	        android:singleLine="true"
	        android:padding="2dp"
	        android:gravity="center_vertical|right"
	        android:inputType="textEmailAddress"
	        android:background="@drawable/edit_text_bg"
	        android:layout_gravity="center_vertical"
        />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\@"
            android:textStyle="bold"
            android:textColor="#404040"
            android:textSize="16sp"
            android:singleLine="true"
            android:padding="2dp"
            android:layout_gravity="center_vertical"
        />
        
        <Spinner
		    android:id="@+id/addr_tail_spinner"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		/>
        
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/book_card"
	    android:layout_width="match_parent"
	    android:layout_height="168dp"
	    android:layout_below="@id/addr_input_area"
	    android:layout_marginTop="20dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
	    android:background="@drawable/book_item_bg"
	    android:padding="4dp" >
	    
	    <ImageView
	        android:id="@+id/item_cover_iv"
	        android:layout_width="120dp"
	        android:layout_height="160dp"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:scaleType="fitXY"
	    />
	    
	    <TextView
	        android:id="@+id/item_title_tv"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/item_cover_iv"
	        android:layout_marginLeft="10dp"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:textStyle="bold"
	        android:textColor="#CD3700"
	        android:textSize="20sp"
	    />
	    
	    <TextView
	        android:id="@+id/item_author_tv"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/item_cover_iv"
	        android:layout_marginLeft="15dp"
	        android:layout_below="@id/item_title_tv"
	        android:layout_marginTop="10dp"
	        android:textStyle="italic"
	        android:textColor="#969696"
	        android:textSize="12sp"
	    />
	    
	    <TextView
	        android:id="@+id/item_intro_tv"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_toRightOf="@id/item_cover_iv"
	        android:layout_marginLeft="15dp"
	        android:layout_below="@id/item_author_tv"
	        android:layout_marginTop="10dp"
	        android:textStyle="normal"
	        android:textColor="#969696"
	        android:textSize="12sp"
	    />
	
	</RelativeLayout>
	
    <ImageView
        android:id="@+id/book_card_shadow"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_below="@id/book_card"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:scaleType="fitXY"
	    android:src="@drawable/book_item_below_shadow"
	/>
    
    <TextView
        android:id="@+id/next_step_btn"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_below="@id/book_card_shadow"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/buttom_bg"
        android:text="@string/set_push_address_next_step"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:clickable="true"
    />
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@id/title_bar"
        android:scaleType="fitXY"
        android:src="@drawable/title_bar_shadow"
    />

</RelativeLayout>
